--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
 	"name": "Maimai B50 Extension",
 	"description": "Extension for showing Maimai B50 scores.",
-	"version": "1.0",
-	"manifest_version": 2,
-	"browser_action": {
+	"version": "1.2",
+	"manifest_version": 3,
+	"action": {
 		"default_popup": "popup.html",
 		"default_icon": "icon.png"
 	},
@@ -13,5 +13,18 @@
 			"js": ["api.js", "content.js"]
 		}
 	],
-	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+	"host_permissions": ["https://maimaidx-eng.com/*"],
+	"permissions": [
+		"storage",
+		"scripting",
+		"activeTab"
+	],
+	"content_security_policy": {
+  "extension_pages": "script-src 'self'; object-src 'self';"
+	},
+    "icons": {
+		"16": "icon.png",
+		"48": "icon.png",
+		"128": "icon.png"
+	}
 }
