還沒重構完，先貼上來

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
 	"content_scripts": [
 		{
 			"matches": ["https://maimaidx-eng.com/*"],
-			"js": ["api.js", "content.js"]
+			"js": ["api.js"]
 		}
 	],
 	"host_permissions": ["https://maimaidx-eng.com/*"],
